FM-76 Fix there of

--- a/app/views/facilities_management/long_list/_filters.html.erb
+++ b/app/views/facilities_management/long_list/_filters.html.erb
@@ -2,7 +2,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-half"><strong class="govuk-heading-m ccs-no-print">Apply filters</strong></div>
     <div class="govuk-grid-column-one-half">
-      <a href="<%= @select_fm_locations %>" class="remove-all ccs-no-print" >Clear filters</a></div>
+      <a href="" id="fm-suppliers-long-list-clear-filters" class="remove-all ccs-no-print" >Clear filters</a></div>
   </div>
   <div class="govuk-grid-row CCS-fm-supplier-filter-container-grey">
     <div class="govuk-grid-row CCS-fm-supplier-filter-container-grey">
