--- a/app/views/facilities_management/long_list/long_list.html.erb
+++ b/app/views/facilities_management/long_list/long_list.html.erb
@@ -11,7 +11,8 @@
     </div>
   </fieldset>
   <p class="govuk-!-font-size-36">
-    <strong><%= @supplier_count %> suppliers found</strong> based on total contract value, when awarded.
+    <strong><span id="fm-long-list-supplier-count"><%= @supplier_count %></span> suppliers found</strong> based on total
+    contract value, when awarded.
   </p>
 
   <!-- Start of filter section -->
