--- a/app/views/facilities_management/long_list/_lot1c.html.erb
+++ b/app/views/facilities_management/long_list/_lot1c.html.erb
@@ -1,17 +1,18 @@
 <div id="fm-lot-1c-list" class="govuk-grid-column-one-third">
-  <span class="govuk-heading-m">Over £50m</span><table class="govuk-table">
-  <thead class="govuk-table__head">
-  <tr class="govuk-table__row">
-    <th class="govuk-table__header" scope="col">Lot 1c</th>
-  </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-  <% @suppliers_lot1c.each do |supplier| %>
+  <span class="govuk-heading-m">Over £50m</span>
+  <table class="govuk-table">
+    <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-    <tr id="<%= SecureRandom.uuid %>" class="govuk-table__row" servicecode="<%= supplier['service_code'] %>" regioncode="<%= supplier['region_code'] %>" >
-      <td class="govuk-table__header" scope="row"><%= supplier['name'] %></td>
+      <th class="govuk-table__header" scope="col">Lot 1c</th>
     </tr>
-    </tbody>
-  <% end %>
-  </table>
+    </thead>
+    <tbody class="govuk-table__body">
+    <% @suppliers_lot1c.each do |supplier| %>
+      <tr class="govuk-table__row">
+      <tr id="<%= SecureRandom.uuid %>" name="<%= supplier['name'] %>" class="govuk-table__row" servicecode="<%= supplier['service_code'] %>" regioncode="<%= supplier['region_code'] %>">
+        <td class="govuk-table__header" scope="row"><%= supplier['name'] %></td>
+      </tr>
+      </tbody>
+    <% end %>
+    </table>
 </div>
