Added tests for upload model

--- a/app/views/supply_teachers/admin/uploads/new.html.erb
+++ b/app/views/supply_teachers/admin/uploads/new.html.erb
@@ -5,7 +5,7 @@
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">Warning</span>
-        Creating a new Upload Session will cancel all previous Upload Sessions that are in review
+        Creating a new Upload Session will cancel all previous Upload Sessions that are in review or in progress
       </strong>
     </div>
     <%= form_for @upload, html: { multipart: true } do |f| %>
