--- a/app/assets/stylesheets/facilities_management/standard_contract_questions.scss
+++ b/app/assets/stylesheets/facilities_management/standard_contract_questions.scss
@@ -1,5 +1,14 @@
 .fm-contract-length-input {
   max-width: 100px;
   min-width: 100px;
-  width:100px;
+  width: 100px;
+}
+
+input[type="number"]::-webkit-outer-spin-button, input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
 }
