--- a/app/views/apprenticeships/journey/find_apprentices3.html.erb
+++ b/app/views/apprenticeships/journey/find_apprentices3.html.erb
@@ -1,28 +1,36 @@
-<%= add_optional_error_prefix_to_page_title(@journey.errors) %>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
 
-<%= render partial: 'shared/error_summary', locals: { errors: @journey.errors } %>
-<%= form_tag @form_path, method: :get do %>
-  <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
-  <%= govuk_form_group_with_optional_error(@journey, :das) do %>
-    <%= govuk_fieldset_with_optional_error(@journey, :das) do %>
-      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-        <h1 class="govuk-fieldset__heading">
-              <%= t('.outline_your_training_hint') %>
-        </h1>
-      </legend>
-      <%= display_error(@journey, :das) %>
- <div class="govuk-form-group">
-          <h1 class="govuk-label-wrapper">
-            <label class="govuk-label govuk-label--m govuk-!-font-weight-bold" for="more-detail3">
-            </label>
-          </h1>
-          <span id="more-detail-hint3" class="govuk-hint">
-            <%= t('.outline_your_training') %>
-          </span>
-          <textarea class="govuk-textarea" id="more-detail3" name="more-detail3" rows="5" aria-describedby="more-detail-hint3"></textarea>
-        </div>
-      </div>
+    <%= form_tag @form_path, method: :get do %>
+      <%= hidden_fields_for_previous_steps_and_responses(@journey) %>
+
+        <%= render partial: 'shared/error_summary', locals: { errors: @journey.errors } %>
+
+        <%= display_error(@journey, :das) %>
+          <%= govuk_form_group_with_optional_error(@journey, :das) do %>
+
+            <h1 class="govuk-label-wrapper">
+              <label class="govuk-label govuk-label--m govuk-!-font-weight-bold" for="more-detail3">
+                <%= t('.outline_your_training_hint') %>
+              </label>
+            </h1>
+
+            <span id="more-detail-hint3" class="govuk-hint">
+              <%= t('.outline_your_training') %>
+            </span>
+
+            <!-- example error html...
+              <span id="more-detail3-error" class="govuk-error-message">
+                <span class="govuk-visually-hidden">Error:</span> Enter your outline for training requirements
+              </span>
+            -->
+
+            <textarea class="govuk-textarea" id="more-detail3" name="more-detail3" rows="5" aria-describedby="more-detail-hint3"></textarea>
+
+          <%= submit_tag t('common.submit'), class: "govuk-button" %>
+
+      <% end %>
     <% end %>
-  <% end %>
-  <%= submit_tag t('common.submit'), class: "govuk-button" %>
-<% end %>
+
+  </div>
+</div>
