--- a/app/views/apprenticeships/journey/find_apprentices2.html.erb
+++ b/app/views/apprenticeships/journey/find_apprentices2.html.erb
@@ -13,12 +13,12 @@
       <%= display_error(@journey, :das) %>
       <div class="govuk-radios">
         <div class="govuk-radios__item">
-          <%= radio_button_tag :das, 'yes', checked?(params[:das], 'yes'), class: 'govuk-radios__input' %>
-          <%= label_tag :das, t('yes'), class: 'govuk-label govuk-radios__label' %>
+          <%= radio_button_tag :das, 'yes', checked?(params[:das], 'yes'), class: 'govuk-radios__input', id: 'radio-y' %>
+          <%= label_tag :das, t('yes'), class: 'govuk-label govuk-radios__label', for: 'radio-y' %>
         </div>
         <div class="govuk-radios__item">
-          <%= radio_button_tag :das, 'no', checked?(params[:das], 'no'), class: 'govuk-radios__input' %>
-          <%= label_tag :das, t('no'), class: 'govuk-label govuk-radios__label' %>
+          <%= radio_button_tag :das, 'no', checked?(params[:das], 'no'), class: 'govuk-radios__input', id: 'radio-n' %>
+          <%= label_tag :das, t('no'), class: 'govuk-label govuk-radios__label', for: 'radio-n' %>
         </div>
       </div>
     <% end %>
