suppliers rake job read xml into database

--- a/app/views/apprenticeships/journey/find_apprentices4.html.erb
+++ b/app/views/apprenticeships/journey/find_apprentices4.html.erb
@@ -73,7 +73,7 @@
                               class: "govuk-checkboxes__input",
                               id: "rating_#{rating}"
                           ) %>
-                      <label class="govuk-label govuk-checkboxes__label" for="rating_<%= rating %>">
+                      <label class="govuk-label govuk-checkboxes__label" for="rating<%= rating %>">
                         <%= rating %>
                       </label>
                   </div>
