--- a/app/views/apprenticeships/home/training_information.html.erb
+++ b/app/views/apprenticeships/home/training_information.html.erb
@@ -2,12 +2,13 @@
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
 <%= form_tag apprenticeships_search_results_path, method: :get do %>
+<div>
   <label class="govuk-label govuk-label--m" for="search">
     <%= t('Training provider information STUB') %>
   </label>
   <span id="more-detail-hint" class="govuk-hint">
     For example, the apprenticeship standard, level and specific requirements fromn the training provider.
   </span>
-</div> 
+</div>
  <%= link_to t('common.continue'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('common.continue') %>
 <% end %>
