Add CCS contact page support link to MC suppliers page

--- a/app/views/management_consultancy/suppliers/index.html.erb
+++ b/app/views/management_consultancy/suppliers/index.html.erb
@@ -7,7 +7,7 @@
       </p>
       <br>
       <p class="govuk-body">
-        <%= t('.no_suppliers_found.contact_html', contact_link: mail_to('#', t('.no_suppliers_found.contact_link_text'))) %>
+        <%= t('.no_suppliers_found.contact_html', contact_link: link_to(t('.no_suppliers_found.contact_link_text'), 'https://www.crowncommercial.gov.uk/contact')) %>
       </p>
     <% else %>
       <h1 class="govuk-heading-xl"><%= t('.heading') %></h1>
