Added show page with new designs

--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -74,3 +74,7 @@ $govuk-link-visited-colour: #4c2c92;
 #main-footer .ccs-footer__links {
   text-decoration: underline; 
 }
+
+.govuk-button--warning {
+  background-color: govuk-colour("red") !important;
+}
