--- a/app/views/supply_teachers/admin/uploads/_upload.html.erb
+++ b/app/views/supply_teachers/admin/uploads/_upload.html.erb
@@ -1,5 +1,5 @@
 <tr class="govuk-table__row">
-  <td class="govuk-table__cell"><%= link_to 'Upload session #' + upload.id[0..7], upload %></td>
+  <td class="govuk-table__cell"><%= link_to 'Upload session #' + upload.short_uuid, upload %></td>
   <td class="govuk-table__cell"><%= upload.created_at.strftime('%m/%d/%Y @ %H:%M') %></td>
   <td class="govuk-table__cell"><%= upload.files_count %></td>
   <td class="govuk-table__cell"><strong class="govuk-tag ccs-tag-<%= upload.aasm_state %>"><%= t('supply_teachers.admin.uploads.index.'+upload.aasm_state+'_tag') %></strong></td>
