FM address lookup integration changes and tidy up

--- a/app/views/facilities_management/buildings/_building_list.html.erb
+++ b/app/views/facilities_management/buildings/_building_list.html.erb
@@ -62,7 +62,7 @@
                 Internal area:
               </div>
               <div class="govuk-grid-column-two-thirds govuk-!-font-size-16">
-                <%= building['fm-gross-internal-area'] %>
+                <%= building['gia'] %>
               </div>
             </div>
             <div class="govuk-grid-row">
