--- a/app/views/facilities_management/home/index.html.erb
+++ b/app/views/facilities_management/home/index.html.erb
@@ -32,3 +32,12 @@
     </div>
   </div>
 </div>
+<script type="application/javascript">
+    if (localStorage) {
+        localStorage.clear();
+    }
+
+    if (sessionStorage) {
+        sessionStorage.clear();
+    }
+</script>
