--- a/app/views/supply_teachers/admin/uploads/_upload.html.erb
+++ b/app/views/supply_teachers/admin/uploads/_upload.html.erb
@@ -2,5 +2,5 @@
   <td class="govuk-table__cell"><%= link_to 'Upload session #' + upload.short_uuid, upload %></td>
   <td class="govuk-table__cell"><%= upload.created_at.strftime('%m/%d/%Y @ %H:%M') %></td>
   <td class="govuk-table__cell"><%= upload.files_count %></td>
-  <td class="govuk-table__cell"><strong class="govuk-tag ccs-tag-<%= upload.aasm_state %>"><%= t('supply_teachers.admin.uploads.index.'+upload.aasm_state+'_tag') %></strong></td>
+  <td class="govuk-table__cell"><strong class="govuk-tag ccs-tag-<%= upload.aasm_state %>"><%= upload.aasm_state.humanize %></strong></td>
 </tr>
