--- a/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
+++ b/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
@@ -33,6 +33,10 @@
 }
 /* footer at foot fix: ends */
 
+.ccs-font-weight-semi-bold {
+    font-weight: 600;
+}
+
 .govuk-header__navigation .govuk-header__navigation-item {
     border-bottom: none !important;
 }
