cg no suppoliers found HTML page

--- a/app/views/legal_services/suppliers/no_suppliers_found.html.erb
+++ b/app/views/legal_services/suppliers/no_suppliers_found.html.erb
@@ -3,9 +3,9 @@
 
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-5"><%= t('.heading') %></h1>
 
-        <p class="govuk-body-l ccs-font-weight-semi-bold"><%= t('.statement') %></p>
+        <p class="govuk-body-l"><%= t('.statement') %></p>
 
-        <p class="govuk-body"><a href="<%= t('common.ccs_contact_support_url') %>" class="govuk-link"><%= t('.link_click_text') %></a> <%= t('.link_end_text') %></p>
+        <p class="govuk-body"><a href="<%= t('common.ccs_contact_url') %>" class="govuk-link"><%= t('.link_click_text') %></a> <%= t('.link_end_text') %></p>
 
     </div>
 </div>
