--- a/app/views/facilities_management/standard_contract_questions/_contract_extensions.html.erb
+++ b/app/views/facilities_management/standard_contract_questions/_contract_extensions.html.erb
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="fm-contract-extension-no" name="contract-extension-radio" type="radio" value="no">
+        <input class="govuk-radios__input" checked id="fm-contract-extension-no" name="contract-extension-radio" type="radio" value="no">
         <label class="govuk-label govuk-radios__label" for="fm-contract-extension-no">
           No
         </label>
