FM fix post code display bug

--- a/app/views/facilities_management/buildings/_services.html.erb
+++ b/app/views/facilities_management/buildings/_services.html.erb
@@ -1,6 +1,6 @@
 <div class="govuk-body">
   <div class="govuk-grid-row">
-    <h1 class="govuk-caption-xl">You have chosen <span class="govuk-!-font-weight-bold" id="fm-service-count">0</span>
+    <h1 class="govuk-caption-xl">You have chosen <span class="govuk-!-font-weight-bold" id="fm-selected-service-count">0</span>
       <span class="govuk-!-font-weight-bold"> services </span>
       so far</h1>
   </div>
